--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.1"
   }
 }
